crates/edifact-rs-derive/tests/ui/fail_group_requires_vec.stderr
error: field `line`: #[edifact(group)] requires Vec<T>
  --> $DIR/fail_group_requires_vec.rs:15:15
   |
15 |     #[edifact(group)]
   |               ^^^^^
